--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "private": true,
   "dependencies": {
@@ -30,6 +32,7 @@
     "@angular-devkit/build-angular": "17.1.3",
     "@angular/cli": "17.1.3",
     "@angular/compiler-cli": "17.1.3",
+    "@cypress/schematic": "2.5.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^16.11.35",
     "copyfiles": "^2.4.1",
@@ -43,6 +46,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "protractor": "~7.0.0",
     "ts-node": "~10.9.0",
-    "typescript": "~4.9.3"
+    "typescript": "~4.9.3",
+    "cypress": "latest"
   }
 }
