--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "@angular-devkit/build-angular": "17.1.3",
     "@angular/cli": "17.1.3",
     "@angular/compiler-cli": "17.1.3",
+    "@cypress-audit/lighthouse": "^1.4.2",
     "@cypress/schematic": "2.5.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^16.11.35",
     "copyfiles": "^2.4.1",
+    "cypress": "latest",
     "jasmine-core": "~5.1.0",
     "jasmine-marbles": "~0.9.2",
     "jasmine-spec-reporter": "~7.0.0",
@@ -46,7 +48,6 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "protractor": "~7.0.0",
     "ts-node": "~10.9.0",
-    "typescript": "~4.9.3",
-    "cypress": "latest"
+    "typescript": "~4.9.3"
   }
 }
